NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Amount_CTM_Average_Price__c.field-meta.xml
<CustomField>
    <fullName>Amount_CTM_Average_Price__c</fullName>
    <label>Amount (CTM Average Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>