NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Competitor_Name__c</fullName>
    <label>Competitor Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daikin</fullName>
            </value>
            <value>
                <fullName>Thermoking</fullName>
            </value>
            <value>
                <fullName>Star Cool</fullName>
            </value>
            <value>
                <fullName>Taylor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>