NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Customer_Type__c</fullName>
    <description>Container sales customer type</description>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipping Line</fullName>
            </value>
            <value>
                <fullName>Leasing Company</fullName>
            </value>
            <value>
                <fullName>Ports &amp; Terminals</fullName>
            </value>
            <value>
                <fullName>Static Storage / Rentals</fullName>
            </value>
            <value>
                <fullName>Ship</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>