NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_End_User__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Container End User)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>