NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Lost_Comment__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Lost_Comment__c</fullName>
    <label>Lost Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>