NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Lost_Leasing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Lost_Leasing_Company_Name__c</fullName>
    <label>Lost Leasing Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>