NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Lost_Reason__c</fullName>
    <description>Container sales opportunity lost reason</description>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leased carrier from a leasing company</fullName>
            </value>
            <value>
                <fullName>Leased another competitor unit</fullName>
            </value>
            <value>
                <fullName>Competition win</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>