NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_NewQuoteURL__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_NewQuoteURL__c</fullName>
    <formula>IF( ISPICKVAL(Type, &apos;Genset&apos;),  &apos;lightning/o/SBQQ__Quote__c/new?recordTypeId=0128N0000004HrtQAE&apos;, &apos;lightning/o/SBQQ__Quote__c/new?recordTypeId=0128N0000004HryQAE&apos;)</formula>
    <label>NewQuoteURL</label>
    <type>Text</type>
</CustomField>