NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Operating_Region_1__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Operating_Region_1__c</fullName>
    <description>Container Sales Opportunities region</description>
    <label>Operating Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAO</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
                <label>APO</label>
            </value>
            <value>
                <fullName>SNAO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>