NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capex</fullName>
            </value>
            <value>
                <fullName>Opex</fullName>
            </value>
            <value>
                <fullName>Capex &amp; Opex</fullName>
            </value>
            <value>
                <fullName>Buy</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>