NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Probability__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Probability__c</fullName>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low (&lt;50%)</fullName>
            </value>
            <value>
                <fullName>Medium (50–75%)</fullName>
            </value>
            <value>
                <fullName>High (≥75%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>