NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINER_Production_Timing__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Production_Timing__c</fullName>
    <description>Container production timing</description>
    <label>Production Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>