NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CONTAINERLeased_by_other_leasing_company__c.field-meta.xml
<CustomField>
    <fullName>CONTAINERLeased_by_other_leasing_company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leased by other leasing company</label>
    <type>Checkbox</type>
</CustomField>