NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/CTBR_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTBR Shipping Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ctbr_Account_Address_Junction__c.Type__c</field>
            <operation>equals</operation>
            <value>Units Ship To</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ctbr_Account_Address_Junction__c</referenceTo>
    <relationshipLabel>Opportunities (CTBR Shipping Address)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>