NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Amended_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Amended_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>if this is an amendment then the original oppty will show up here</description>
    <label>Amended Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Amendments</relationshipLabel>
    <relationshipName>Amendments</relationshipName>
    <type>Lookup</type>
</CustomField>