NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Amendment_Update_Completed__c.field-meta.xml
<CustomField>
    <fullName>NATT_Amendment_Update_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Update Completed</label>
    <type>Checkbox</type>
</CustomField>