NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Billing_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NATT Billing Address</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR 3</booleanFilter>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>NATT_Address__c.NATT_Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>NATT_Address__c.NATT_Type__c</field>
            <operation>equals</operation>
            <value>Billing</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>CTBR Units</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Opportunities (NATT Billing Address)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>