NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Competitor__c.field-meta.xml
<CustomField>
    <fullName>NATT_Competitor__c</fullName>
    <description>NATT</description>
    <label>Competitor</label>
    <length>225</length>
    <type>Text</type>
</CustomField>