NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Competitor_Price__c</fullName>
    <description>NATT</description>
    <label>Competitor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>