NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Competitor_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Competitor_Unit__c</fullName>
    <description>NATT</description>
    <label>Competitor Unit</label>
    <length>225</length>
    <type>Text</type>
</CustomField>