NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>NATT_Customer_Category__c</fullName>
    <description>NATT</description>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Previously Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>