NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>NATT_End_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the end customer associated with this deal</description>
    <label>End Customer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>MX_Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CTBR_Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (End Customer)</relationshipLabel>
    <relationshipName>NATTEndCustomerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>