NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Lead_Created_Date__c</fullName>
    <description>NATT</description>
    <label>NATT Lead Created Date</label>
    <type>Date</type>
</CustomField>