NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Opportunity_Percentage__c.field-meta.xml
<CustomField>
    <fullName>NATT_Opportunity_Percentage__c</fullName>
    <label>Opportunity %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>