NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Opportunity_Range__c.field-meta.xml
<CustomField>
    <fullName>NATT_Opportunity_Range__c</fullName>
    <formula>IF(Probability &gt; 0.1 &amp;&amp; Probability &lt;= 0.50,&apos;Low&apos;,
   IF(Probability &gt; 0.51 &amp;&amp; Probability &lt;= 0.75, &apos;Medium&apos;, 
   IF(Probability &gt; 0.75, &apos;High&apos;,&apos; &apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity % Range</label>
    <type>Text</type>
</CustomField>