NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Other_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>NATT_Other_Lost_Reason__c</fullName>
    <description>NATT</description>
    <label>Other Lost Reason</label>
    <length>225</length>
    <type>Text</type>
</CustomField>