NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Primary_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Primary_Quote_Status__c</fullName>
    <formula>TEXT(SBQQ__PrimaryQuote__r.SBQQ__Status__c)</formula>
    <label>Primary Quote Status</label>
    <type>Text</type>
</CustomField>