NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Family__c</fullName>
    <description>NATT</description>
    <formula>TEXT(SBQQ__PrimaryQuote__r.NATT_Product_Family__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>