NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Line__c</fullName>
    <description>NATT for reporting</description>
    <formula>TEXT(SBQQ__PrimaryQuote__r.NATT_Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>