NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Revision_Number__c</fullName>
    <description>NATT for amendments only</description>
    <label>Revision Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>