NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Status__c</fullName>
    <description>NATT Status for reports</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>No Buy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>