NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Stock__c.field-meta.xml
<CustomField>
    <fullName>NATT_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT users check this if there is no end customer</description>
    <label>Stock</label>
    <type>Checkbox</type>
</CustomField>