NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Telematics_eSolutions__c.field-meta.xml
<CustomField>
    <fullName>NATT_Telematics_eSolutions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Telematics Lynx Fleet</label>
    <type>Checkbox</type>
</CustomField>