NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>NATT_Total_Units__c</fullName>
    <label>Total Units</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>