NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/NATT_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit__c</fullName>
    <description>NATT for reports</description>
    <formula>TEXT(SBQQ__PrimaryQuote__r.NATT_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>