NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Operating_Region__c.field-meta.xml
<CustomField>
    <fullName>Operating_Region__c</fullName>
    <description>opportunity region will be same as account operating region</description>
    <formula>TEXT(Account.CONTAINER_Operating_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Operating region same as operating region in account</inlineHelpText>
    <label>Operating Region</label>
    <type>Text</type>
</CustomField>