NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Opportunity_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_18_digits__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity ID 18 digits</label>
    <type>Text</type>
</CustomField>