NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Source</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Opportunity Source)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>