NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Remaining_Units__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Units__c</fullName>
    <formula>Direct_Sales_Units__c - Unit_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>