NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OptimaLINE</fullName>
            </value>
            <value>
                <fullName>PrimeLINE</fullName>
            </value>
            <value>
                <fullName>EverFRESH</fullName>
            </value>
            <value>
                <fullName>NaturaLINE</fullName>
            </value>
            <value>
                <fullName>ThinLINE</fullName>
            </value>
            <value>
                <fullName>EliteLINE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>