NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Total_Deal_Probability__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_Probability__c</fullName>
    <formula>(NATT_Opportunity_Percentage__c + Probability ) / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average of Percentage and Probability</inlineHelpText>
    <label>Total Deal Probability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>