NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Unit_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Unit_Canceled__c</fullName>
    <label>Unit Canceled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>