NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/Unit_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Unit_Ordered__c</fullName>
    <label>Unit Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>