NATTQA-ENV/force-app/main/default/objects/Opportunity/fields/zDeleteNATT_Total_Units__c.field-meta.xml
<CustomField>
    <fullName>zDeleteNATT_Total_Units__c</fullName>
    <description>NATT Total Units for reports</description>
    <label>zDeleteTotal Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>