NATTQA-ENV/force-app/main/default/objects/Opportunity/recordTypes/Container_BluEdge.recordType-meta.xml
<RecordType>
    <fullName>Container_BluEdge</fullName>
    <active>true</active>
    <businessProcess>Container BluEdge</businessProcess>
    <label>Container BluEdge</label>
</RecordType>